dt-bindings: net: qcom,ipa: Add interconect configuration for v2.0 and v2.5
IPA versions 2.0 and 2.5 only have memory and imem interconnects.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/Documentation/devicetree/bindings/net/qcom,ipa.yaml
+++ b/Documentation/devicetree/bindings/net/qcom,ipa.yaml
@@ -103,6 +103,9 @@ properties:
     oneOf:
       - items:
           - const: memory
+          - const: imem
+      - items:
+          - const: memory
           - const: config
       - items:
           - const: memory
