--- a/Documentation/devicetree/bindings/arm/qcom.yaml
+++ b/Documentation/devicetree/bindings/arm/qcom.yaml
@@ -243,6 +243,11 @@ properties:
 
       - items:
           - enum:
+              - samsung,a6plte
+          - const: qcom,sdm450
+
+      - items:
+          - enum:
               - fairphone,fp3
           - const: qcom,sdm632
 
