--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ modules.order
 /modules.builtin
 /modules.builtin.modinfo
 /modules.nsdeps
+/make.sh
+
+/firmware/
 
 #
 # RPM spec file (make rpm-pkg)
