--- a/arch/arm64/configs/msm8953.config
+++ b/arch/arm64/configs/msm8953.config
@@ -44,3 +44,5 @@ CONFIG_THERMAP_GOV_FAIR_SHARE=y
 CONFIG_VIDEO_QCOM_VENUS=m
 CONFIG_WCN36XX_DEBUGFS=y
 CONFIG_WCN36XX=m
+CONFIG_UEVENT_HELPER=y
+CONFIG_DRM_PANEL_MSM8953_GENERATED=y
